--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
 		"laravel/framework": "5.0.*",
 		"greggilbert/recaptcha": "~2.0",
 		"illuminate/html": "~5.0",
-		"laracasts/flash": "~1.3"
+		"laracasts/flash": "~1.3",
+		"predis/predis": "~1.0"
 	},
 	"require-dev": {
 		"phpunit/phpunit": "~4.0",
